--- a/_posts/2016-06-01-test.md
+++ b/_posts/2016-06-01-test.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: "나는 테스트를 한다."
+title: "블로그 시작"
 date: 2016-06-01 00:00:00 +0900
-categories: Android
-tags: featured
-author: realignist
+categories: Life
+tags: think
+author: wanbok
 ---
 
 # 테스트
